[gd_scene load_steps=13 format=2]

[ext_resource path="res://screens/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/mikodacs-font/Mikodacs-vp2L.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/menus_and_ui_sprites/main title.PNG" type="Texture" id=3]
[ext_resource path="res://assets/my_custom_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/font_test.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/sprites/menus_and_ui_sprites/button when normal.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/menus_and_ui_sprites/button when pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/menus_and_ui_sprites/button when hover.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=5]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MenuMain" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -148.0
margin_top = 319.0
margin_right = 148.0
margin_bottom = 419.0

[node name="StartButton" type="TextureButton" parent="MenuMain"]
margin_right = 300.0
margin_bottom = 27.0
focus_mode = 1
theme = ExtResource( 4 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="MenuMain/StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -8.5
margin_right = 28.0
margin_bottom = 8.5
custom_fonts/font = ExtResource( 5 )
text = "START_B"

[node name="OptionsButton" type="TextureButton" parent="MenuMain"]
margin_top = 31.0
margin_right = 300.0
margin_bottom = 58.0
focus_mode = 1
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="MenuMain/OptionsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 5 )
text = "OPTIONS_B"

[node name="PasswordButton" type="TextureButton" parent="MenuMain"]
margin_top = 62.0
margin_right = 300.0
margin_bottom = 89.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="MenuMain/PasswordButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 56.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 5 )
text = "PASSWORD_B"

[node name="QuitButton" type="TextureButton" parent="MenuMain"]
margin_top = 93.0
margin_right = 300.0
margin_bottom = 120.0
focus_mode = 1
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="MenuMain/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -9.0
margin_right = 24.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 5 )
text = "QUIT_B"

[node name="ReadButton" type="TextureButton" parent="MenuMain"]
margin_top = 124.0
margin_right = 300.0
margin_bottom = 151.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="MenuMain/ReadButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -8.0
margin_right = 5.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 5 )
text = "READ_B"

[node name="Sprite" type="Sprite" parent="MenuMain"]
position = Vector2( 156, -128 )
scale = Vector2( 1.12844, 1.12844 )
texture = ExtResource( 3 )

[node name="OptionsMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SoundSettings" type="HBoxContainer" parent="OptionsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -20.0
margin_right = -50.0
margin_bottom = 20.0

[node name="Labels" type="VBoxContainer" parent="OptionsMenu/SoundSettings"]
margin_right = 72.0
margin_bottom = 40.0

[node name="Music" type="Label" parent="OptionsMenu/SoundSettings/Labels"]
margin_right = 72.0
margin_bottom = 17.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "MUSIC_SET"

[node name="Sound" type="Label" parent="OptionsMenu/SoundSettings/Labels"]
margin_top = 22.0
margin_right = 72.0
margin_bottom = 39.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 6 )
text = "SOUND_SET"

[node name="Sliders" type="VBoxContainer" parent="OptionsMenu/SoundSettings"]
margin_left = 76.0
margin_right = 190.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Music" type="HSlider" parent="OptionsMenu/SoundSettings/Sliders"]
margin_right = 114.0
margin_bottom = 16.0
value = 50.0

[node name="Sound" type="HSlider" parent="OptionsMenu/SoundSettings/Sliders"]
margin_top = 20.0
margin_right = 114.0
margin_bottom = 36.0
value = 50.0

[node name="VideoSettings" type="HBoxContainer" parent="OptionsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 51.0
margin_top = -20.0
margin_right = 235.0
margin_bottom = 32.0

[node name="Labels" type="VBoxContainer" parent="OptionsMenu/VideoSettings"]
margin_right = 91.0
margin_bottom = 52.0

[node name="Fullscreen" type="Label" parent="OptionsMenu/VideoSettings/Labels"]
margin_top = 17.0
margin_right = 91.0
margin_bottom = 34.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 7 )
text = "FULLSCREEN_B"

[node name="Checks" type="VBoxContainer" parent="OptionsMenu/VideoSettings"]
margin_left = 95.0
margin_right = 119.0
margin_bottom = 52.0

[node name="Fullscreen" type="CheckBox" parent="OptionsMenu/VideoSettings/Checks"]
margin_right = 24.0
margin_bottom = 24.0

[node name="BackFromOptions" type="Button" parent="OptionsMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -95.0
margin_right = 43.0
margin_bottom = -72.0
custom_fonts/font = SubResource( 9 )
text = "MENU_B"

[node name="EN setting" type="Button" parent="OptionsMenu"]
margin_left = 401.0
margin_top = 367.0
margin_right = 462.0
margin_bottom = 416.0
custom_fonts/font = ExtResource( 5 )
text = "EN"

[node name="PT setting" type="Button" parent="OptionsMenu"]
margin_left = 567.0
margin_top = 367.0
margin_right = 628.0
margin_bottom = 416.0
custom_fonts/font = ExtResource( 5 )
text = "PT"

[node name="PasswordMenu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -137.5
margin_right = 242.0
margin_bottom = 137.5

[node name="LineEdit" type="LineEdit" parent="PasswordMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.5
margin_top = -12.0
margin_right = 116.5
margin_bottom = 12.0

[node name="BackFromOptions3" type="Button" parent="PasswordMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = 33.0
margin_right = 42.5
margin_bottom = 53.0
custom_fonts/font = ExtResource( 5 )
text = "QUIT_B"

[connection signal="pressed" from="MenuMain/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MenuMain/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MenuMain/PasswordButton" to="." method="_on_PasswordButton_pressed"]
[connection signal="pressed" from="MenuMain/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="MenuMain/ReadButton" to="." method="_on_ReadButton_pressed"]
[connection signal="value_changed" from="OptionsMenu/SoundSettings/Sliders/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="OptionsMenu/SoundSettings/Sliders/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="toggled" from="OptionsMenu/VideoSettings/Checks/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="pressed" from="OptionsMenu/BackFromOptions" to="." method="_on_BackFromOptions_pressed"]
[connection signal="pressed" from="OptionsMenu/EN setting" to="." method="_on_EN_setting_pressed"]
[connection signal="pressed" from="OptionsMenu/PT setting" to="." method="_on_PT_setting_pressed"]
[connection signal="text_entered" from="PasswordMenu/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="PasswordMenu/BackFromOptions3" to="." method="_on_BackFromOptions3_pressed"]
